Make site self-contained

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
     body {
       background: #191c23;
       color: #ffffff;
-      font-family: 'Cinzel', serif;
+      font-family: serif;
       margin: 0;
       padding: 0;
     }
