--- a/css/bootstrap-lite.css
+++ b/css/bootstrap-lite.css
@@ -1,15 +1,28 @@
 .navbar {
+  position: relative;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  padding: 0.5rem 1rem;
+  justify-content: space-between;
+  padding: .5rem 1rem;
 }
 .navbar-brand {
+  padding-top: .3125rem;
+  padding-bottom: .3125rem;
+  margin-right: 1rem;
   font-size: 1.25rem;
   text-decoration: none;
-  margin-right: 1rem;
+  white-space: nowrap;
 }
-.navbar-dark .navbar-brand,
-.navbar-dark .nav-link {
+.navbar-dark .navbar-brand {
+  color: #fff;
+}
+.navbar-dark .navbar-nav .nav-link {
+  color: rgba(255,255,255,.55);
+}
+.navbar-dark .navbar-nav .nav-link:hover,
+.navbar-dark .navbar-nav .nav-link:focus,
+.navbar-dark .navbar-nav .nav-link.active {
   color: #fff;
 }
 .navbar-nav {
