--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,7 @@
     body {
       background: #191c23;
       color: #ffffff;
-      font-family: serif;
+      font-family: 'Cinzel', serif;
       margin: 0;
       padding: 0;
     }
@@ -13,6 +13,7 @@
       color: #e0e0ff;
       font-weight: 700;
       margin-bottom: 10px;
+      font-family: 'Cinzel', serif;
     }
     .actions {
       display: flex;
@@ -126,6 +127,11 @@
     }
     .pin-btn {
       cursor: pointer;
+      display: inline-block;
+      transition: transform 0.2s;
+    }
+    .card.owned .pin-btn {
+      transform: rotate(-35deg);
     }
     .name {
       font-size: 1.4em;
