fix: keep header and footer above content

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -366,6 +366,7 @@
     width: 100%;
     overflow: hidden;
     background: url('../resources/images/background_site_header_footer.png') repeat;
+    z-index: 3000;
   }
 
   footer::before {
@@ -387,6 +388,7 @@
     overflow: hidden;
     min-height: 120px;
     background: url('../resources/images/background_site_header_footer.png') repeat;
+    z-index: 3000;
   }
 
   .navbar::after {
