--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,14 +12,15 @@
     h1 {
       color: #e0e0ff;
       font-weight: 700;
-      margin-bottom: 10px;
+      margin-top: 0;
+      margin-bottom: 20px;
       font-family: 'Cinzel', serif;
     }
     .actions {
       display: flex;
       align-items: center;
       gap: 20px;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
       flex-wrap: wrap;
     }
     .icon-bar {
@@ -386,6 +387,10 @@
     z-index: 3000;
   }
 
+  .navbar-brand {
+    font-size: 2rem;
+  }
+
   .navbar::after {
     content: '';
     position: absolute;
@@ -399,5 +404,5 @@
 
 body {
   padding-top: 145px;
-  padding-bottom: 60px;
+  padding-bottom: 80px;
 }
