reduce fonts on small screens

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -332,6 +332,11 @@
   .content-wrapper { padding: 5px; }
   .cards { grid-template-columns: 1fr; }
   th, td { font-size: 0.93em; }
+  html { font-size: 14px; }
+}
+
+@media (max-width: 480px) {
+  html { font-size: 12px; }
 }
 
 .notification-container {
