--- a/src/css/style.css
+++ b/src/css/style.css
@@ -419,6 +419,13 @@
     z-index: 1;
   }
 
+  .navbar .header-inner {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: flex-end;
+    padding: 0 20px 10px;
+  }
+
 body {
   padding-top: 145px;
   padding-bottom: 80px;
