--- a/src/css/style.css
+++ b/src/css/style.css
@@ -422,19 +422,24 @@
   .navbar .header-inner {
     display: flex;
     flex-wrap: nowrap;
-    align-items: flex-end;
-    padding: 0 20px 10px;
+    align-items: center;
+    padding: 0 20px 10px 20px;
+  }
+
+  .navbar-nav .nav-item {
+    margin: 0 10px;
+  }
+
+  .lang-flags {
+    margin-left: auto;
+    margin-right: 10px;
+    display: flex;
+    gap: 8px;
   }
 
 body {
   padding-top: 145px;
   padding-bottom: 80px;
-}
-
-.lang-flags {
-  margin-left: auto;
-  display: flex;
-  gap: 8px;
 }
 
 .lang-flag {
