--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,9 +50,20 @@
   padding: 4px;
   transition: color 0.15s, opacity 0.15s;
 }
+.icon-btn img {
+  width: 24px;
+  height: 24px;
+}
 .icon-btn.toggled,
 .icon-btn:not(.disabled):hover {
   color: #fff;
+}
+.icon-btn:not(.disabled):hover img,
+.icon-btn.toggled img {
+  filter: brightness(1.2);
+}
+.icon-btn.disabled img {
+  opacity: 0.4;
 }
 .icon-btn.disabled {
   opacity: 0.4;
@@ -480,7 +491,6 @@ body[data-page="weapons"] .card-back {
   }
 
   .lang-flags {
-    margin-left: auto;
     margin-right: 10px;
     display: flex;
     gap: 8px;
