--- a/src/css/style.css
+++ b/src/css/style.css
@@ -140,6 +140,7 @@ body[data-page="weapons"] .card {
       box-sizing: border-box;
       border-radius: 14px;
       transform-style: preserve-3d;
+      -webkit-transform-style: preserve-3d;
       overflow: hidden;
       transition: transform 0.6s;
     }
@@ -218,6 +219,7 @@ body[data-page="pictos"] .card.owned .card-inner::before {
       position: absolute;
       inset: 0;
       backface-visibility: hidden;
+      -webkit-backface-visibility: hidden;
       display: flex;
       flex-direction: column;
       box-sizing: border-box;
@@ -226,6 +228,9 @@ body[data-page="pictos"] .card.owned .card-inner::before {
 body[data-page="weapons"] .card-face {
   padding: 34px 40px 30px 90px;
 }
+    .card-front {
+      transform: rotateY(0deg);
+    }
     .card-back {
       transform: rotateY(180deg);
       padding-left: 50px;
