--- a/src/css/style.css
+++ b/src/css/style.css
@@ -228,11 +228,11 @@ body[data-page="pictos"] .card.owned .card-inner::before {
 body[data-page="weapons"] .card-face {
   padding: 34px 40px 30px 90px;
 }
-    .card-front {
+    .card .card-front {
       transform: rotateY(0deg);
     }
-    .card-back {
-      transform: rotateY(180deg);
+    .card .card-back {
+      transform: rotateY(180deg) scale(-1, 1);
       padding-left: 50px;
       padding-right: 30px;
       text-align: left;
@@ -242,11 +242,12 @@ body[data-page="weapons"] .card-back {
   padding-left: 100px;
   padding-right: 50px;
 }
-    .card.flipped .card-inner,
-    .card.pinned .card-inner {
+    .card.flipped .card-front {
       transform: rotateY(180deg);
     }
-    .card.flipped,
+    .card.flipped .card-back {
+      transform: rotateY(0deg) scale(-1, 1);
+    }
     .card.pinned {
       z-index: 10;
     }
