--- a/src/css/style.css
+++ b/src/css/style.css
@@ -585,7 +585,9 @@ th, .info-icon, .char-select img, .picto-checkbox, input[type="checkbox"] {
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  margin-bottom: 40px;
+  margin: 0 auto 40px;
+  max-width: 1440px;
+  width: 100%;
 }
 .index-row.reverse {
   flex-direction: column;
