--- a/src/css/style.css
+++ b/src/css/style.css
@@ -663,6 +663,6 @@ th, .info-icon, .char-select img, .picto-checkbox, input[type="checkbox"] {
 }
 
 .not-found-img {
-  max-width: 100%;
   max-height: 60vh;
+  width: auto;
 }
