--- a/src/css/style.css
+++ b/src/css/style.css
@@ -663,8 +663,7 @@ th, .info-icon, .char-select img, .picto-checkbox, input[type="checkbox"] {
 }
 
 .not-found-img {
-  max-height: 60vh;
-  max-width: 100%;
-  height: auto;
-  width: auto;
+  max-height: 30vh;
+  max-width: 30vh;
+  margin: auto;
 }
