Move header controls into burger menu

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -520,13 +520,10 @@ body[data-page="weapons"] .card-back {
   align-items: center;
 }
 
-.header-panel {
-  background: url('../resources/images/general/background_button.png') left top/cover no-repeat;
-  padding: 6px 30px;
-  border-radius: 8px;
+
+.nav-collapse {
   display: flex;
   align-items: center;
-  gap: 8px;
 }
 
   .navbar-nav .nav-item {
@@ -541,14 +538,18 @@ body[data-page="weapons"] .card-back {
     display: block;
     margin-left: auto;
   }
+  .nav-collapse {
+    width: 100%;
+    flex-direction: column;
+    display: none;
+  }
+  .nav-collapse.show {
+    display: flex;
+  }
   .navbar-nav {
     width: 100%;
     flex-direction: column;
     margin-top: 10px;
-    display: none;
-  }
-  .navbar-nav.show {
-    display: flex;
   }
   .navbar-nav .nav-item {
     margin: 5px 0;
