Expand nav-collapse to fill header

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -524,6 +524,7 @@ body[data-page="weapons"] .card-back {
 .nav-collapse {
   display: flex;
   align-items: center;
+  flex-grow: 1;
 }
 
   .navbar-nav .nav-item {
