Increase padding of collapsed menu

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -551,7 +551,7 @@ body[data-page="weapons"] .card-back {
     display: none;
     align-items: flex-end;
     background: rgba(0,0,0,0.5);
-    padding: 10px;
+    padding: 10px 20px;
     width: fit-content;
     z-index: 3001;
   }
