Set admin table default page size and style

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -896,6 +896,7 @@ th, .info-icon, .char-select img, .picto-checkbox, input[type="checkbox"] {
 
 .admin-grid .MuiDataGrid-footerContainer{
   padding-right:10px;
+  color:#ccc;
 }
 .admin-grid .add-row-btn{
   margin-left:10px;
