Fix image path using character id

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -122,7 +122,7 @@
       display: inline-block;
     }
     .label-debug.game {
-      border-color: blue;
+      border: 1px dashed blue;
     }
     .cards {
       display: grid;
